reorder axes names for cylindrical coordinates for consistency with other direct bases

--- a/content/17.geometry_and_indexing.md
+++ b/content/17.geometry_and_indexing.md
@@ -46,7 +46,7 @@ While these are representative of the most common spatial representations, addit
 | Coordinate system               | Axes                                                        |
 |---------------------------------|-------------------------------------------------------------|
 | Cartesian coordinates           | $x, y, z$                                                   |
-| Cylindrical polar coordinates   | $r, z, \theta \in [0, 2 \pi] $                              |
+| Cylindrical polar coordinates   | $r, \theta \in [0, 2 \pi], z$                               |
 | Spherical coordinates           | $r, \theta, \phi$                                           |
 | Geographic coordinates          | latitude $\in [0, 180]$, longitude $\in [0, 360]$, altitude |
 | Internal geographic coordinates | latitude, longitude, depth                                  |
