--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -59,12 +59,12 @@ Code review in `yt` is conducted on a line-by-line basis, as well as on a higher
 The workflow for code review roughly follows this outline:
 
  1. A pull request is issued.  When a new pull request is issued, a template is provided that includes a description of the change, requesting information about its compliance with coding standards, etc.
- 2. The label "triage" is automatically applied, and removed when a team member applies the correct component label.
- 3. Code is reviewed, line-by-line, and suggestions made for either stylistic or algorithmic reasons.
- 4. This process is iterated, ensuring that tests, style and accuracy are maintained.
+ 2. The pull request is automatically marked as unmergeable until a team member applies the correct component label.
+ 3. Code is reviewed, line-by-line, and suggestions are made by humans. Code linting is automated.
+ 4. This process is iterated, ensuring that tests, results accuracy and coding standards are maintained.
 
 One increasing issue with the code review process is ensuring that changes are reviewed with appropriate urgency; larger pull requests tend to languish without review, as the requirements for review necessarily add burden to the maintainers.
-"Bugfix" changes formally require only one reviewer, whereas the `yt` guidelines suggest that larger changes require review from three different team members.
+"Bugfix" changes formally require only one reviewer, whereas the `yt` guidelines suggest that larger changes require review from two different team members.
 
 ### YTEP Process {#sec:ytep}
 
