add ytep 36 to index and fix neighbouring lines

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -111,8 +111,9 @@ Below, we include a table of current YTEPs as of this writing.
 | 0031     | Unstructured Mesh                                     | December 18, 2014  | Matthew Turk                                                        |
 | 0032     | Removing the global octree mesh for particle data     | February 9 2017    | Nathan Goldbaum, Meagan Lang, Matthew Turk                          |
 | 0033     | Dropping Python2 Support                              | November 28, 2017  | Nathan Goldbaum                                                     |
-| 0034     | yt FITS Image Standard                                | September 9, 2018  | John ZuHone 
-| 0037     | Code Styling                                          | May 18, 2020       | Clément Robert                                                       |
+| 0034     | yt FITS Image Standard                                | September 9, 2018  | John ZuHone                                                         |
+| 0036     | Migrating from nose to pytest                         | September 30, 2019 | Jared Coughlin                                                      |
+| 0037     | Code Styling                                          | May 18, 2020       | Clément Robert                                                      |
 | 1000     | GitHub Migration                                      | March 25, 2017     | Lots of folks                                                       |
 | 1776     | Team Infrastructure                                   | August 24, 2014    | Britton Smith                                                       |
 | 3000     | Let's all start using yt 3.0!                         | October 30, 2013   | Matthew Turk                                                        |
