fix missing author list for YTEP 11 and use Matt's full name

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -82,14 +82,14 @@ Below, we include a table of current YTEPs as of this writing.
 |----------|-------------------------------------------------------|--------------------|---------------------------------------------------------------------|
 | 0001     | IO Chunking                                           | November 26, 2012  | Matthew Turk                                                        |
 | 0002     | Profile Plotter                                       | December 5, 2012   | Matthew Turk                                                        |
-| 0003     | Standardizing field names                             | December 11, 2012  | Casey Stark, Nathan Goldbaum, Matt Turk                             |
+| 0003     | Standardizing field names                             | December 11, 2012  | Casey Stark, Nathan Goldbaum, Matthew Turk                          |
 | 0005     | Octrees for Fluids and Particles                      | December 24, 2012  | Matthew Turk                                                        |
 | 0006     | Periodicity                                           | January 10, 2013   | Matthew Turk, Nathan Goldbaum                                       |
 | 0007     | Automatic Pull Requests' validation                   | February 21, 2013  | Kacper Kowalik                                                      |
 | 0008     | Release Schedule                                      | February 21, 2013  | Matthew Turk                                                        |
 | 0009     | AMRKDTree for Data Sources                            | February 28, 2012  | Sam Skillman                                                        |
 | 0010     | Refactoring for Volume Rendering and Movie Generation | March 3, 2013      | Cameron Hummels                                                     |
-| 0011     | Symbol units in yt                                    | March 7, 2013      |                                                                     |
+| 0011     | Symbol units in yt                                    | March 7, 2013      | Nathan Goldbaum, Casey Stark, Anna Rosen, Matthew Turk              |
 | 0012     | Halo Redesign                                         | March 7, 2013      | Britton Smith, Cameron Hummels, Chris Moody, Mark Richardson, Yu Lu |
 | 0013     | Deposited Particle Fields                             | April 25, 2013     | Chris Moody, Matthew Turk, Britton Smith, Doug Rudd, Sam Leitner    |
 | 0014     | Field Filters                                         | July 2nd, 2013     | Matthew Turk                                                        |
