--- a/content/20.data_objects.md
+++ b/content/20.data_objects.md
@@ -23,7 +23,7 @@ However, the number of nodes is fixed at 8, with subdivision always occurring at
 
 The final mechanism by which data is selected is for discrete data points, typically particles in astrophysical simulations.
 At present, this is done by first identifying which data files intersect with a given selector, then selecting individual points.
-There is no hierarchical data selection conducted in this system, as we do not yet allow for re-ordering of data on disk or in-memory which would facilitate hierarchical selection through the use of operations such as morton indices.
+There is no hierarchical data selection conducted in this system, as we do not yet allow for re-ordering of data on disk or in-memory which would facilitate hierarchical selection through the use of operations such as Morton indices.
 
 ### Selection Routines
 
