--- a/content/20.data_objects.md
+++ b/content/20.data_objects.md
@@ -51,7 +51,7 @@ A selection of data in a low-resolution simulation from a sphere.
 ](images/selectors/sp2.svg){#fig:sp2}
 
 ![
-The logical `NOT` of the regions from Figures @fig:reg2 and @fig:sp2.
+The logical `A AND NOT B` for regions `A` and `B` from Figures @fig:reg2 and @fig:sp2 respectively.
 ](images/selectors/reg2_not_sp2.svg){#fig:reg2_not_sp2}
 
 
