upper case the word 'Python' as a language name in text

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -44,7 +44,7 @@ For processes like surface extraction, this might include ensuring that fixed ra
 For streamlines, it might include computing the analytical solution to an integration along a known vector field.
 And for projections, it would mean that integrating the path with a weight of "one" should result in a uniform set of values equal to the path length across the domain.
 
-At present, the unit tests in `yt` take a considerable amount of time to run, and are using the nosetests framework.  Modern python practice is to use the newer pytest framework, and efforts are underway to port `yt` to utilize pytest, and in the process, attempt to reduce overall runtime.
+At present, the unit tests in `yt` take a considerable amount of time to run, and are using the nosetests framework.  Modern Python practice is to use the newer pytest framework, and efforts are underway to port `yt` to utilize pytest, and in the process, attempt to reduce overall runtime.
 
 ### Answer Testing {#sec:answer_testing}
 
