fix convoluted phrasing

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -61,7 +61,7 @@ The octs living at the coarsest level of the simulation are stored as a uniform 
 Each oct is represented as structure that contains the on-file location of the oct (`file_ind`) and its in-memory location (`domain_ind`), the index of the domain it belongs to (`domain`) and a list of pointers to its children (up to eight in 3D). This requires at most 88 bytes per oct.
 
 In order to load data within a given region, a two-step approach is followed.
-First, the cells interesting with the region of interest, as described in [Data Objects](#sec:data_objects) are selected. `yt` relies on an oct-visitor machinery combined with selection routines.
+First, the cells within the region of interest, as described in [Data Objects](#sec:data_objects) are selected. `yt` relies on an oct-visitor machinery combined with selection routines.
 The tree is recursively traversed depth-first starting from the root grid, following only those branches that may intersect with the selected region.
 At the tip of each branch, the up-to-eight leaf cells are visited.
 In a first pass, the number of selected cells is computed and in a second pass, the on-file location of their parent oct is stored.
