add a note to figure 11's caption

--- a/content/31.bitmap.md
+++ b/content/31.bitmap.md
@@ -78,6 +78,7 @@ As seen in panel (a) of Figure @fig:zorder, ordering of the cells by their Morto
 ![
 Example of 3rd order Morton curve in two dimensions.
 The bits of the $x$ and $y$ indices are interleaved to generate a single integer that fully describes the cell's location within the two-dimensional domain to within $1/2^{3}$th of the domain in each dimension.
+**NOTE: wouldn't it make more sense to write $y$ and $x$ is this order, so that the interleaving could be represented with arrows without crossing them ?**
 ](images/bitmap/zorder.png){#fig:zorder}
 
 The precision of a single Morton index is only limited by the size of the integer used to store it.
