add a note to figure 13's caption

--- a/content/31.bitmap.md
+++ b/content/31.bitmap.md
@@ -147,6 +147,7 @@ Figure @fig:collision_files shows an example of collisions for the different par
 Examples of collisions for four different domain partitioning schemes.
 The heavy black lines denote 1st order Morton cells.
 The presence of more that one file (color) within a Morton cell indicates a collision.
+**NOTE: from an accessibility standpoint, I must note that using a smooth color gradient may be counter productive for colorblind readers as it makes it a lot harder to perveice that neighbouring regions belong to different files.**
 ](images/bitmap/index.png){#fig:collision_files}
 
 For the random domain partition in panel (a), every cell within a 1st order Morton index will contain data from all 8 files.
