add a note to figure 14's caption

--- a/content/31.bitmap.md
+++ b/content/31.bitmap.md
@@ -171,6 +171,7 @@ Figure @fig:ghosts shows an example of a ghost zone around the first selector fr
 Examples of a selector ghost zone with a width of one Morton cell at an index order of 3 for four different domain partitioning schemes.
 The shaded circular region is the selector and the shaded box is the ghost zone.
 Different partitioning schemes will lead to different numbers of ghost files.
+**NOTE: same as figure 13**
 ](images/bitmap/ghosts.png){#fig:ghosts}
 
 The ghost zone has a width of one Morton cell at an index order of 3 and contains the same part of the domain in each case.
