avoid using 'fortunately' to describe a very-much purposed feature

--- a/content/31.bitmap.md
+++ b/content/31.bitmap.md
@@ -206,7 +206,7 @@ The basic procedure for constructing the bitmap index is as follows:
     indices, refined indices, and collisions are saved to an external
     index file.
 
-For large datasets and/or high levels of refinement, this can be a time consuming process; fortunately, it must only be done once.
+For large datasets and/or high levels of refinement, this can be a time consuming process; however, it must only be done once.
 For future selections, the bitmap can be quickly loaded and used to identify files in less time than would be required to load and query each file within the dataset individually.
 Selection using a loaded bitmap goes as follows:
 
