add a note to figure 15's caption

--- a/content/31.bitmap.md
+++ b/content/31.bitmap.md
@@ -261,6 +261,7 @@ Dependence of query time (top), fraction of files selected/cells with collisions
 The solid black lines correspond to the query times and files identified by just the selectors.
 The dashed blue lines correspond to the query times and additional files selected when a ghost zone with the width of one Morton cell is added around the selectors.
 The dash-dotted line in the middle panel shows the fraction of cells with collisions between files.
+**NOTE: maybe this would make more sense as scatter plots ? (connecting dots to fill a continuous yet unreachable space of non-integer-limited x values seems unappropriate.**
 ](images/bitmap/vary_order1_or0.png){#fig:test_order1}
 
 Below a bitmap index order of 4, there are collisions between multiple files within every cell, resulting in a larger number of files being identified.
