--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -4,7 +4,7 @@
 During the Spring of 2017, development transitioned from occurring on [Bitbucket](https://bitbucket.org/yt_analysis/) to [GitHub](https://github.com/yt-project/), and the source code management system was changed from [Mercurial](https://www.mercurial-scm.org/) to [git](https://git-scm.org/).
 Development occurs through the "pull request" model, wherein changes to the codebase are made and then requested to be included in the primary repository.
 Typically, there are two branches of development, and occasionally three.  The first of these is the "stable" branch, which is much slower-paced, and typically only modified during the release periods.
-The second is that of "main" (formelly "master", which is the conventional term in git terminology, and renamed in early 2021; the corresponding mercurial term would be "default") which is where current development takes place.
+The second is that of "main" (formerly "master", which is the conventional term in git terminology, and renamed in early 2021; the corresponding mercurial term would be "default") which is where current development takes place.
 The "main" branch is meant to be for development proceeding that does not drastically disrupt usage patterns.
 Occasionally, such as during the development of `yt` 4.0, a third branch is included in the primary repository.
 This development branch is open for large and potentially disruptive changes, but in order to centralize code review and developer attention it takes place there.
@@ -116,4 +116,3 @@ Below, we include a table of current YTEPs as of this writing.
 | 1000     | GitHub Migration                                      | March 25, 2017     | Lots of folks                                                       |
 | 1776     | Team Infrastructure                                   | August 24, 2014    | Britton Smith                                                       |
 | 3000     | Let's all start using yt 3.0!                         | October 30, 2013   | Matthew Turk                                                        |
-
