add a note to figure 18's caption

--- a/content/31.bitmap.md
+++ b/content/31.bitmap.md
@@ -338,6 +338,7 @@ Files in the random dataset contain a random sample of points, uniformly distrib
 ![
 Dependence of query time (top), the number of files selected (middle), and the size of the index (bottom) on index order for different domain partitioning between files.
 The dotted magenta lines are for a randomly partitioned dataset, the cyan dashed-dotted lines are a dataset partitioned by equal slices alone one dimension, the dashed red lines are a dataset partitioned along an 6th order Morton curve, and the solid blue lines are a dataset partitioned along a 6th order Hilbert curve.
+**NOTE: it looks like the Morton curve is almost always behind the Hilbert one. Can you use zorder to put it at the frontrow instead so that we can see both ?**
 ](images/bitmap/vary_decomp_to0.png){#fig:test_decomp}
 
 Many more files are identified for the random dataset than those datasets with localized partitioning of the domain.
