--- a/content/10.community_building.md
+++ b/content/10.community_building.md
@@ -7,7 +7,7 @@ Choosing a software package for a particular purpose involves evaluating several
 
 There are several rough categories of individuals engaged in development and utilization of `yt`.
 As a result of its API-first design, there are few if any individuals who use `yt` that do not do so through the scripting interface; this means that the vast (if not exclusive) majority of individuals who interact with the functionality in `yt` are doing so by writing their own scripts, modules, and code, and arguably engaging in a value-added development process of their own.
-The majority of individuals using `yt` at present are in astronomy and astrophysics, typically fields of simulation, although an increasingly large group of individuals from other domains is participating in development and using `yt` for their own domain-specific problems.
+The majority of individuals using `yt` at present are in astronomy and astrophysics, typically fields of simulation, although representatives from other domains are increasingly participating in development and using yt for their own domain-specific problems
 
 Making the distinction somewhat more clearly, there are individuals who have built their own scripts and utilized them as well as individuals who have contributed changes or modules to the primary `yt` codebase.
 In addition, there is an emerging set of projects that build on `yt` as infrastructure to conduct scientific analysis.
