Use svg instead of PDFs

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -77,12 +77,12 @@ Other optimizations are possible that trade computational time with memory, for 
 ![
 Illustration of a binary search through a quadtree. The search starts at the root level (level = 1 here) and recursively selects the quad that contains the point until reaching a leaf.
 The procedure is easily generalized in 3D.
-](images/octree/binary_tree_research_2D.pdf){#fig:binary-search}
+](images/octree/binary_tree_research_2D.svg){#fig:binary-search}
 
 ![
 Scheme of the AMR structure used to estimate the gradient of a quantity in the central oct (red). Octs are represented in thick lines, cells in thin lines and virtual cells in dashed lines. _Left panel:_ The virtual cell values on a $4^3$ grid are interpolated from the nearest cell in the AMR grid. If the nearest cell is at the same (or coarser) level, its value is used directly. Note that virtual cells $f_{31}$ and $f_{32}$ have the value of the the actual coarser cell (green). If the cell is refined, the mean of its children is used (for example $f_{20}$ is the mean of all the blue cells). _Right panel:_ Gradients are estimated using a first-order finite difference centered scheme on the $4^3$ virtual cells, here illustrated for a gradient along the $x$ direction.
 **NOTE: the blue cell should be used in the example (for instance make it the $f_{01}$ cell, rather than the $f_{20}$ one since the $y$ direction ends up not being used in the actual computation**
-](images/octree/gradient_computation.pdf){#fig:octree-gradient}
+](images/octree/gradient_computation.svg){#fig:octree-gradient}
 
 ### SPH Analysis
 
